fixed structure of TicketMessage object
