# docs/swagger.yaml
@@ -186,7 +186,7 @@ definitions:
         type: number
       discount_type:
         type: string
-      is_ticket_sale_done:
+      is_ticket_sale_date_expired:
         type: boolean
       is_transfer_payment_fees_to_guest:
         type: boolean
@@ -209,6 +209,10 @@ definitions:
       ticket_reference:
         type: string
       ticket_sale_end_date:
+        type: string
+      ticket_sale_start_date:
+        type: string
+      ticket_sale_start_time:
         type: string
       ticket_sales_end_time:
         type: string
@@ -245,6 +249,17 @@ definitions:
     - organizer_id
     - venue
     type: object
+  models.ActivePeriod:
+    properties:
+      ticket_sale_end_date:
+        type: string
+      ticket_sale_end_time:
+        type: string
+      ticket_sale_start_date:
+        type: string
+      ticket_sale_start_time:
+        type: string
+    type: object
   models.Location:
     properties:
       city:
@@ -256,6 +271,8 @@ definitions:
     type: object
   models.Ticket:
     properties:
+      active_period:
+        $ref: '#/definitions/models.ActivePeriod'
       additional_information_fields:
         items:
           type: string
@@ -274,13 +291,13 @@ definitions:
         type: number
       discount_type:
         type: string
-      eventID:
+      event_id:
         type: integer
       id:
         type: integer
       is_sold_out_ticket:
         type: boolean
-      isTransferPaymentFeesToGuest:
+      is_transfer_payment_fees_to_guest:
         type: boolean
       name:
         type: string
@@ -300,10 +317,6 @@ definitions:
         items:
           type: string
         type: array
-      ticket_sale_end_date:
-        type: string
-      ticket_sales_end_time:
-        type: string
       type:
         type: string
     type: object
